--- a/chessEasy/chessEasy/MainWindow.xaml
+++ b/chessEasy/chessEasy/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="600">
     <Grid>
-        <Grid>
+        <Grid x:Name="chessBoard">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
@@ -28,7 +28,7 @@
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" Grid.Column="0" Background="Black" />
+            <Border Grid.Row="0" Grid.Column="0" Background="Black" MouseDown="Border_MouseDown" />
             <Border Grid.Row="0" Grid.Column="2" Background="Black" />
             <Border Grid.Row="0" Grid.Column="4" Background="Black" />
             <Border Grid.Row="0" Grid.Column="6" Background="Black" />
@@ -60,6 +60,7 @@
             <Border Grid.Row="7" Grid.Column="3" Background="Black" />
             <Border Grid.Row="7" Grid.Column="5" Background="Black" />
             <Border Grid.Row="7" Grid.Column="7" Background="Black" />
+            <Image x:Name="MyImage" Source="images/white-king.png" Grid.Column="1"/>
         </Grid>
     </Grid>
 </Window>
