--- a/chessEasy/chessEasy/MainWindow.xaml
+++ b/chessEasy/chessEasy/MainWindow.xaml
@@ -28,7 +28,7 @@
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" Grid.Column="0" Background="LightGray" MouseDown="Border_MouseDown" />
+            <Border Grid.Row="0" Grid.Column="0" Background="LightGray" />
             <Border Grid.Row="0" Grid.Column="2" Background="LightGray" />
             <Border Grid.Row="0" Grid.Column="4" Background="LightGray" />
             <Border Grid.Row="0" Grid.Column="6" Background="LightGray" />
